4-Despliega-Weblogic-Kubernetes/2_creaVolumeClaimShared.yaml
apiVersion: v1
kind: Pod
metadata:
  name: init-pvc-weblogic
spec:
  containers:
    - name: app
      image: container-registry.oracle.com/os/oraclelinux:8-slim
      command: ["/bin/sh"]
      args: ["-c", "chmod 777 /shared"]
      volumeMounts:
        - name: persistent-storage
          mountPath: /shared
  restartPolicy: Never
  volumes:
    - name: persistent-storage
      persistentVolumeClaim:
        claimName: weblogic
